--- a/css/styles.css
+++ b/css/styles.css
@@ -60,6 +60,12 @@ body {
     color: var(--accent-clr);
 }
 
+.section-title {
+    font-size: 36px;
+    line-height: 1.17;
+    letter-spacing: 0.03em;
+}
+
 /** =====  Header section  =====  
 ======================================== */
 .logo-link .logo-dark {
@@ -90,7 +96,68 @@ body {
     color: var(--accent-clr);
 }
 
+/** =====  Hero section  =====  
+======================================== */
+.hero-section {
+    background-color: var(--dark-bg-clr);
+}
 
+.main-title {
+    font-weight: 900;
+    font-size: 44px;
+    line-height: 1.36;
+    letter-spacing: 0.06em;
+    text-transform: uppercase;
+    color: var(--light-txt-clr);
+}
+
+.main-btn {
+    font-weight: 700;
+    line-height: 1.88;
+    letter-spacing: 0.06em;
+    color: var(--light-txt-clr);
+    background-color: var(--accent-clr);
+}
+
+.main-btn:hover,
+.main-btn:focus {
+    background-color: var(--sec-acc-clr);
+}
+
+/** =====  Features section  =====  
+======================================== */
+.features-title {
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+}
+
+.features-desc {
+    font-size: 14px;
+    line-height: 1.71;
+    letter-spacing: 0.03em;
+    color: var(--secondary-txt-clr);
+}
+
+/** =====  Team section  =====  
+======================================== */
+.team-section {
+    background-color: var(--sec-bg-clr);
+}
+
+.team-title {
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.19;
+    letter-spacing: 0.03em;
+}
+
+.team-desc {
+    line-height: 1.19;
+    letter-spacing: 0.03em;
+    color: var(--secondary-txt-clr);
+}
 
 /** =====  Footer section  =====  
 ======================================== */
@@ -124,3 +191,8 @@ body {
 .addr-link:focus {
     color: var(--light-txt-clr);
 }
+
+/** =====  Portfolio page  =====  
+======================================== */
+/** =====  Comment  =====  
+======================================== */
