--- a/css/styles.css
+++ b/css/styles.css
@@ -200,6 +200,7 @@ body {
     font-weight: 500;
     line-height: 1.62;
     letter-spacing: 0.03em;
+    background-color: var(--sec-bg-clr);
 }
 
 .radio-btn:hover,
